crates/dao/tests/compile_fail/tx_view_escapes_scope.stderr
error[E0597]: `tx` does not live long enough
  --> tests/compile_fail/tx_view_escapes_scope.rs:42:18
   |
40 |     let leaked = {
   |         ------ borrow later stored here
41 |         let tx = pool.begin().await.unwrap();
   |             -- binding `tx` declared here
42 |         dao.with(&tx) // ERROR: `tx` does not live long enough
   |                  ^^^ borrowed value does not live long enough
43 |     };
   |     - `tx` dropped here while still borrowed
